# estimate-cannabis-maturity-with-cv

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.cursor/rules/: project-python.mdc  skill-receiving-code-review.mdc  skill-requesting-code-review.mdc  skill-systematic-debugging.mdc  skill-test-driven-development.mdc  skill-writing-plans.mdc
.githooks/: pre-push
.github/workflows/: branch-name.yml  ci.yml  claude-code-review.yml
app/: README.md  __init__.py
app/api/: doppler.yaml  pyproject.toml  run.py
app/api/src/: config.py  main.py
app/api/src/models/: schemas.py
app/api/src/routes/: analysis.py
app/api/src/services/: database.py  database_service.py  local_inference_service.py  modal_client.py  storage.py  storage_service.py
app/api/tests/: conftest.py  test_analysis.py  test_storage.py  test_storage_service.py
app/backend/: .gitignore  README.md  __init__.py  detector.py  distribution.py  pyproject.toml  utils.py
app/backend/src/: __init__.py  annotation_renderer.py  color_classifier.py  config.py  crop_extractor.py  distribution.py  maturity_assessor.py  models.py  stigma_detector.py  trichome_detector.py  utils.py
app/backend/src/cannabis_maturity/: annotation_renderer.py  color_classifier.py  crop_extractor.py  maturity_assessor.py  models.py  stigma_color_classifier.py  stigma_color_data.json  stigma_detector.py  trichome_detector.py
app/backend/tests/: __init__.py  conftest.py  test_color_classifier.py  test_detector.py  test_distribution.py  test_maturity_assessor.py  test_models.py  test_stigma_detector.py  test_trichome_detector.py  test_utils.py
app/docs/: SETUP.md  gili-setup.md  working-with-modal-and-supabase.md
app/docs/plans/: 2026-03-07-architecture.md  2026-03-07-data-model.md  README.md  giliweiss-issues-order.md  giliweiss-work-log.md
app/mobile/: .gitignore  app.json  package-lock.json  package.json  tsconfig.json
app/mobile/api/: client.ts  types.ts
app/mobile/app/: _layout.tsx  camera.tsx  history.tsx  home.tsx  how-it-works.tsx  index.tsx  plant-detail.tsx  register.tsx  results.tsx  review.tsx  save-flower.tsx  settings.tsx  stigma-samples.tsx  trichome-samples.tsx
app/mobile/components/: AnalysisCard.tsx  BottomNav.tsx  DonutChart.tsx  GradientButton.tsx  MaturityBadge.tsx  ZoomableImage.tsx
app/mobile/constants/: theme.ts
app/mobile/contexts/: ThemeContext.tsx
app/mobile/store/: analysisResult.ts
app/modal/: constants.py  inference.py  pyproject.toml  upload_weights.py
app/scripts/: download_weights.py
app/supabase/migrations/: 20260307163836_create_analyses_table.sql  20260326200000_add_profiles_plants_and_update_analyses.sql  20260328160000_make_plants_created_by_nullable.sql  20260328170000_drop_plants_strain_column.sql  20260328180000_make_images_bucket_public.sql
docs/: python-style-guide.md
docs/ai/: README.md
docs/plans/: 2026-03-07-screens.md
docs/plans/phase-1-mvp/: overview.md  tasks.md
docs/plans/phase-3-plants/: overview.md
notebooks/analysis/evaluation/: compare_models_single_class_base_evaluator.ipynb  evaluator_playground.ipynb
notebooks/exploration/classification/: blur_augmentations_exploration.ipynb  compare_different_datasets_size_scores.ipynb
notebooks/exploration/datasets/: annotation_converter.ipynb  annotations_metadata.ipynb  create_new_train_test_datasets.ipynb  create_stigmas_dataset_in_segmentsai.ipynb
notebooks/exploration/detectron2/: compare_detectron2_models.ipynb  detectron2_with_sahi.ipynb  model_assisted_labeling_with_detectron.ipynb
notebooks/exploration/pipelines/: check_quality_of_uriel_images.ipynb  end_to_end_pipe_playground.ipynb
notebooks/exploration/stigmas/: search_for_color_threshold.ipynb
notebooks/training/classification/: fastai_blur_classification.ipynb  fastai_blur_classification_per_class.ipynb  fastai_classification.ipynb
notebooks/training/detectron2/: train_InstanceSegmentation_mask_rcnn_R_50_FPN_3x.ipynb  train_InstanceSegmentation_mask_rcnn_X_101_32x8d_FPN_3x.ipynb
notebooks/training/ultralytics/: ultralytics_models_hparams_tune.ipynb  ultralytics_models_train.ipynb
scripts/data_preparation/: extract_sharpness_asses_from_patches.py
scripts/datasets/: datasets_stats.py  merge_datasets_script.py
src/annotations/: annotation_handler.py  segmentsai_handler.py
src/app/: db_utils.py  streamlit_utils.py  upload_images_to_bucket.py  utils.py  ☘️_Introduction.py
src/app/pages/: 1_💡_Experiment_Tutorial.py  2_🔬_Experiment.py  3_📝_Post_Questionnaire.py
src/classification/: train_model_utils.py  utils.py
src/classification/classification_datatsets/: create_balanced_datasets.py  create_blur_trichomes_dataset.py
src/classification/fastai/: train_model.py
src/common/: __init__.py  detection.py  io.py  logging.py  metrics.py  visualization.py
src/config/: __init__.py  paths.py  settings.py
src/data_analysis/assessing_cannabis_maturity/: collect_pistils_results_to_csv.py  collect_trichomes_results_to_csv.py
src/data_preparation/: __init__.py  image_io.py  patching.py  sharpness.py
src/datasets_and_annotations/: annotation_handler.py  segmentsai_handler.py
src/pipelines/: model_assist_label_pipeline.py  preprocessing_pipeline.py  stigma_segmentation_pipe.py  trichomes_extractor.py
src/pipelines/end_to_end/: end_to_end_pipe.py  end_to_end_pistils.py  end_to_end_utils.py  end_to_end_with_classification.py  single_image_trichomes_analysis_pipe.py
src/segmentation/evaluation/: base_evaluator.py  detectron2_evaluator.py  ultralytics_evaluator.py  yolo_nas_evaluator.py
src/segmentation/handlers/: __init__.py  detectron2_handler.py  sam_handler.py  ultralytics_handler.py
src/segmentation/train_scripts/: submit_detectron_model_training_jobs.py  train_detectron2_model.py  (+3 more)
src/stigmas_segmentation/: pistils_analysis_pipe.py
src/utils/: assess_cannabis_exp_utils.py  metadata_utils.py
trichome_backend/: README.md  __init__.py  models.py  pyproject.toml  requirements.txt
trichome_backend/tests/: conftest.py  test_detector.py  test_distribution.py  test_models.py  test_utils.py
(+21 files in other folders)
