[project]
name = "trichome-modal"
version = "0.1.0"
description = "Modal GPU inference functions for cannabis maturity analysis"
requires-python = ">=3.10"
dependencies = [
    "modal==1.3.5",
    "ultralytics==8.4.21",
    "opencv-python-headless==4.13.0",
    "numpy==2.4.2",
    "pillow==12.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
