[project]
name = "trichome-modal"
version = "0.1.0"
description = "Modal GPU inference functions for cannabis maturity analysis"
requires-python = "~=3.13.0"
dependencies = [
    "modal==1.3.5",
    "ultralytics==8.4.21",
    "opencv-python-headless==4.13.0.92",
    "numpy==2.4.2",
    "pillow==12.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.5",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "modal==1.3.5",
]
